Added some sample shops where the models are customised and a new product image app

--- a/TODO
+++ b/TODO
@@ -2,3 +2,6 @@ Fields to write:
 - Postcode field
 - Currency field
 - Country field for addresses
+
+Sample shop:
+- How to have the admin site reflect your local models
