Updated AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,8 @@ The PRIMARY AUTHORS are:
 
 * David Winterbottom <david.winterbottom@gmail.com>
 * Andrew Ingram
+
+Significant contributions from:
+
+* Patryk Zawadski
+* Tomasz Rybarczyk
